Adapt to Utils package update and update models
The models were updated to be more like StackExchange's format (nicer to
the eyes).

--- a/email_models/model_email_comment_YouTube - no idea where to get the comments from.html
+++ b/email_models/model_email_comment_YouTube - no idea where to get the comments from.html
@@ -17,7 +17,7 @@
 			<tr>
 				<td class="outer-container-padding-width" width='40'></td>
 				<td class="inner-container-width" width='600'>
-					<div style="height: 40px;"><p style="width: 100%; max-width: 1075px; font-size: 130%; color: white; background: red; margin: 0 auto; padding: 8px 0; text-align: center;"><strong><em><u>|RSS Feed notifications|</u></em></strong></p></div>
+					<div style="height: 40px;"><p style="width: 100%; max-width: 1075px; font-size: 21px; color: white; background: red; margin: 0 auto; padding: 8px 0; text-align: center;"><strong>|<em><u>RSS Feed notifications</u></em>|</strong></p></div>
 					<br>
 					<table class="inner-container-width" width='600' align="center" cellspacing="0" cellpadding="0" border="0">
 						<tr>
@@ -175,7 +175,7 @@
 				<td class="outer-container-padding-width" width='40'></td>
 				<td class="inner-container-padding-width" width='600'>
 					<br>
-					<p style="max-width: 1075px; font-size: 85%; color: white; background-color: #07b315; margin: 0 auto; padding: 5px 0 5px 5px;">V.I.S.O.R. Systems</p>
+					<p style="max-width: 1075px; font-size: 13px; color: white; background-color: #07b315; margin: 0 auto; padding: 5px 0 5px 5px;">V.I.S.O.R. Systems</p>
 				</td>
 				<td class="outer-container-padding-width" width='40'></td>
 			</tr>
