--- a/email_models/model_email_rss.html
+++ b/email_models/model_email_rss.html
@@ -1,21 +1,44 @@
+<!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+  ~ Copyright 2023-2023 Edw590
+  ~
+  ~ Licensed to the Apache Software Foundation (ASF) under one
+  ~ or more contributor license agreements.  See the NOTICE file
+  ~ distributed with this work for additional information
+  ~ regarding copyright ownership.  The ASF licenses this file
+  ~ to you under the Apache License, Version 2.0 (the
+  ~ "License"); you may not use this file except in compliance
+  ~ with the License.  You may obtain a copy of the License at
+  ~
+  ~   http://www.apache.org/licenses/LICENSE-2.0
+  ~
+  ~ Unless required by applicable law or agreed to in writing,
+  ~ software distributed under the License is distributed on an
+  ~ "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
+  ~ KIND, either express or implied.  See the License for the
+  ~ specific language governing permissions and limitations
+  ~ under the License.
+  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
+
 <!DOCTYPE html>
-<html lang="en" style="margin: 0; font-family: arial,Arial,sans-serif;">
+<html lang="en">
 	<head>
 		<title>|3234_MSG_SUBJECT|</title>
 		<style>
-			#descrip_place img {
+			img {
 				max-width: 100%;
-				vertical-align:bottom;
+				vertical-align: bottom;
 			}
 			pre, code, blockquote {
 				border-radius: 5px;
 			}
 			pre, code {
+				font-size: 14px;
 				padding: 15px;
-				background-color: #E0E0E0;
+				background-color: #E1E2E3;
                 white-space: break-spaces;
 			}
 			code {
+				font-family: ui-monospace, "Cascadia Mono", "Segoe UI Mono", "Liberation Mono", Menlo, Monaco, Consolas, monospace;
 				padding: 0 5px 0 5px;
 			}
 			blockquote {
@@ -23,14 +46,15 @@
 				color: #656565;
 				padding: 1px 0 1px 15px;
 				position: relative;
+				margin-left: 15px;
 			}
 			blockquote::before {
 				background: #C8CCD0;
 				width: 4px;
-				height: 100%;
+				height: 101%;
 				content: "";
 				position: absolute;
-				margin-top: -3px;
+				margin-top: -2px;
 				margin-left: -15px;
 				border-radius: 2px;
 			}
@@ -40,13 +64,13 @@
 		</style>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	</head>
-	<body style="word-wrap: break-word;">
+	<body style="font-family: arial,sans-serif; word-wrap: break-word;">
 		<span style="display: none !important; visibility: hidden; width: 0; height: 0; opacity: 0; color: transparent;">|3234_ENTRY_TITLE| -by- |3234_ENTRY_AUTHOR| ||| |3234_ENTRY_DESCRIPTION| |||</span>
 		<span id="page_beginning"></span>
-		<div style="height: 40px;"><p style="max-width: 1075px; font-size: 130%; color: white; background: red; margin: 0 auto; padding: 8px 0; text-align: center;"><strong><em><u>|RSS Feed notifications|</u></em></strong></p></div>
+		<div style="height: 40px;"><p style="max-width: 1075px; font-size: 21px; color: white; background: red; margin: 0 auto; padding: 8px 0; text-align: center;"><strong>|<em><u>RSS Feed notifications</u></em>|</strong></p></div>
 		<br>
 		<div style="margin-left: 20px; margin-right: 20px;">
-			<div style="max-width: 950px; font-size: 15px; margin: 0 auto;">
+			<div style="max-width: 950px; margin: 0 auto; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI Adjusted', 'Segoe UI', 'Liberation Sans', sans-serif;">
 
 				<div style="border: 3px solid #FFD700; padding: 0 10px 10px 10px;">
 					<p><b><u>Main information</u></b></p>
@@ -56,7 +80,7 @@
 					<p>Updated on: |3234_ENTRY_UPD_DATE|</p>
 				</div>
 				<br>
-				<div id="descrip_place" style="border: 3px solid #FFD700; padding: 0 10px 10px 10px;">
+				<div style="border: 3px solid #FFD700; padding: 0 10px 10px 10px;">
 					<p><b><u>Description</u></b></p>
 					|3234_ENTRY_DESCRIPTION|
 				</div>
@@ -64,6 +88,6 @@
 			</div>
 		</div>
 		<br>
-		<p style="max-width: 1075px; font-size: 85%; color: white; background-color: #07b315; margin: 0 auto; padding: 5px 0 5px 5px;">V.I.S.O.R. Systems</p>
+		<p style="max-width: 1075px; font-size: 13px; color: white; background-color: #07b315; margin: 0 auto; padding: 5px 0 5px 5px;">V.I.S.O.R. Systems</p>
 	</body>
 </html>
